# cabal-sample

./: README.md  cabal-sample.cabal  hie.yaml
.github/workflows/: haskell.yml
