cabal-version:      2.4
name:               cabal-sample
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             takachi2
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  build-depends:    base ^>=4.14.3.0
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists -Wcompat

common test-depends
  build-depends:      hspec ^>=2.7.10
  build-tool-depends: hspec-discover:hspec-discover -any

library
  import:          shared-properties

  -- cabal-fmt: expand src
  exposed-modules: MyLib

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:  src

executable cabal-sample
  import:         shared-properties
  main-is:        Main.hs

  -- cabal-fmt: expand app -Main
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:  cabal-sample
  hs-source-dirs: app

test-suite cabal-sample-test
  import:         shared-properties, test-depends
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs

  -- cabal-fmt: expand test -Spec
  other-modules:  MyLibSpec
  build-depends:  cabal-sample
